# CVForge-AI

./: Dockerfile  README.md  app.py  pyproject.toml  requirement.txt  requirements.txt
